Update godword in config.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "port": 3000,
-  "godword": "CF7252Rocks",
+  "godword": "Nazarthecoolhuman1234567890",
   "kingword": "TickbuilderAndBlueDragonGod2024",
   "altlimit": 1,
   "slowmode": 1000,
